--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello, World
+<html>
+    <head>
+
+</head>
+<body>
+    <img src="images/sadness.jpg" alt="cat">
+    I'm happy cat.
+    
+</body>
+
+</html>
