--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
     <head>
-
+    <script type="text/javascript" src="myfile.js"></script>
 </head>
 <body>
-    <img src="images/sadness.jpg" alt="cat">
+
+    <img onClick="showHappy();" src="images/sadness.jpg" alt="cat">
     I'm happy cat.
     
 </body>
