--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <body>
 
     <img onClick="showHappy();" src="images/sadness.jpg" alt="cat">
-    I'm happy cat.
+    <br><br>I'm happy cat.
+    Текст Українською мовою. Ще текст-текст-текст...
     
 </body>
 
