--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <html>
     <head>
-    <script type="text/javascript" src="myfile.js"></script>
+    <script type="text/javascript" src="some.js"></script>
 </head>
 <body>
 
-    <img onClick="showHappy();" src="images/sadness.jpg" alt="cat">
-    <br><br>I'm happy cat.
-    Текст Українською мовою. Ще текст-текст-текст...
+I'm happy cat.
+Текст. Ще текст-текст-текст...
     
 </body>
 
