--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 </head>
 <body>
 
-I'm happy cat.
-Текст. Ще текст-текст-текст...
-<br>some text... Text... Text... Text...
+Comming soon!
+<br><br>
+Незабаром! ;-)
     
 </body>
 
