--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 </head>
 <body>
 
-Coming soon!
+Coming soon!/Незабаром! ;-)
 <br><br>
-Незабаром! ;-)
+<img src="images/note-ComingSoon.jpg">
     
 </body>
 
