--- a/ask-search-form.html
+++ b/ask-search-form.html
@@ -7,7 +7,7 @@
         
         <form method="post" id="form1">
             <input class="alf-form" type="text" name="search_alf" size="41" required autofocus>
-            <input class="alf-form" type="submit" value="Запитати!" onclick="myFunction()">
+            <input class="alf-form" type="submit" value="Запитати!" onclick="myFunction();">
         </form>
             <script>
                 function myFunction() {
