--- a/ask-search-form.html
+++ b/ask-search-form.html
@@ -11,8 +11,13 @@
         </form>
             <script>
                 function myFunction() {
-                window.open("http://www.google.com/?#q="+form1.search_alf.value);
-                }
+                    if (form1.elements['search_alf'].value) {
+                        window.open("http://www.google.com/?#q="+form1.search_alf.value);
+                        }
+                    if (form1.search_alf.value == "") {
+                        alert ("Будь-ласка, заповніть поле пошуку!");
+                        }
+                    }
             </script>
         
     </body>
