--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Сайт прогнозу погоди</title>
+        <link rel="stylesheet" href="styles.css" type="text/css">
     </head>
 
     <body>
