--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
 
         <p>Місто: <span id="location" ></span></p>
 
-        <table id="weatherTable">
-            <tr>
-                <th>Коли</th><th>Небо</th><th>Температура</th><th>Стан</th>
-            </tr>
+        <table border="1" id="weatherTable">
+
         </table>
 
         <p id="error"></p>
