--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Сайт прогнозу погоди</title>
-        <link rel="stylesheet" href="styles.css" type="text/css">
+        <link rel="stylesheet" href="styles.css" type="text/css" >
     </head>
 
     <body>
@@ -13,8 +13,8 @@
 
         <p>Місто: <span id="location" ></span></p>
 
-        <table border="1" id="weatherTable">
-
+        <table border="1" width="100%" id="weatherTable">
+            
         </table>
 
         <p id="error"></p>
