--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
         <p>Місто: <span id="location" ></span></p>
 
-        <table border="1" width="100%" id="weatherTable">
+        <div id="weatherTable">
             
-        </table>
+        </div>
 
         <p id="error"></p>
 
