--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <!-- viewport для браузера IE10, це зроблено щоб виправити помилку для Surface/desktop Windows 8 -->
     <script src="http://twbs.docs.org.ua/assets/js/ie10-viewport-bug-workaround.js"></script>
     
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.0.0/moment.min.js"></script>
     <script src="scripts/weatherService.js"></script>
     <script src="scripts/script.js"></script>
