--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         });
     </script>
 
-    <script>
+    <script> // перемістив
         $(document).ready(function(){
             $(".daybox").dblclick(function(){
                 $(this).hide("slow","swing");
@@ -32,7 +32,7 @@
         });
     </script>
 <!-- -->
-    <script>
+    <script> // перемістив
         $(function () {
             $('[data-toggle="tooltip"]').tooltip()
         })
