--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         
         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
             <div class="db_left">
-                <img id="hot" src="images/img/img_transp.gif" alt="hot">
+                <img class="i01d" src="images/img/img_transp.gif" alt="hot">
             </div>
             <div class="db_right">
                 <h3>Вночі</h3>
