--- a/weekly_forecast.html
+++ b/weekly_forecast.html
@@ -18,9 +18,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>
         $(document).ready(function(){
-        $("#flip").click(function(){
-            $("#panel").slideToggle("slow");
-        });
+            $("#flip").click(function(){
+                $("#panel").slideToggle("slow");
+            });
         });
     </script>
 
@@ -35,7 +35,7 @@
     <script>
         $(function () {
             $('[data-toggle="tooltip"]').tooltip()
-        })
+        });
     </script>
 
     <script src="moment-with-locales.min.js"></script>
@@ -99,7 +99,7 @@
                     <div role="tabpanel" class="tab-pane active" id="monday">
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="hot" src="images/img/img_transp.gif" alt="hot">
+                                <img class="hot" src="images/img/img_transp.gif" alt="hot">
                             </div>
                             <div class="db_right">
                                 <h3>Вночі</h3>
