--- a/weekly_forecast.html
+++ b/weekly_forecast.html
@@ -110,7 +110,7 @@
                         </div>
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="cloudy" src="images/img/img_transp.gif" alt="cloudy">
+                                <img class="cloudy" src="images/img/img_transp.gif" alt="cloudy">
                             </div>
                             <div class="db_right">
                                 <h3>Зранку</h3>
@@ -121,7 +121,7 @@
                         </div>
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="rainy" src="images/img/img_transp.gif" alt="rainy">
+                                <img class="rainy" src="images/img/img_transp.gif" alt="rainy">
                             </div>
                             <div class="db_right">
                                 <h3>Вдень</h3>
@@ -132,7 +132,7 @@
                         </div>
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="snowy" src="images/img/img_transp.gif" alt="snowy">
+                                <img class="snowy" src="images/img/img_transp.gif" alt="snowy">
                             </div>
                             <div class="db_right">
                                 <h3>Ввечері</h3>
@@ -146,7 +146,7 @@
                     <div role="tabpanel" class="tab-pane" id="tuesday">
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="cloudy" src="images/img/img_transp.gif" alt="cloudy">
+                                <img class="cloudy" src="images/img/img_transp.gif" alt="cloudy">
                             </div>
                             <div class="db_right">
                                 <h3>Вночі</h3>
@@ -157,7 +157,7 @@
                         </div>
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="hot" src="images/img/img_transp.gif" alt="hot">
+                                <img class="hot" src="images/img/img_transp.gif" alt="hot">
                             </div>
                             <div class="db_right">
                                 <h3>Зранку</h3>
@@ -168,7 +168,7 @@
                         </div>
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="hot" src="images/img/img_transp.gif" alt="hot">
+                                <img class="hot" src="images/img/img_transp.gif" alt="hot">
                             </div>
                             <div class="db_right">
                                 <h3>Вдень</h3>
@@ -179,7 +179,7 @@
                         </div>
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="snowy" src="images/img/img_transp.gif" alt="snowy">
+                                <img class="snowy" src="images/img/img_transp.gif" alt="snowy">
                             </div>
                             <div class="db_right">
                                 <h3>Ввечері</h3>
@@ -193,7 +193,7 @@
                     <div role="tabpanel" class="tab-pane" id="wednesday">
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="cloudy" src="images/img/img_transp.gif" alt="cloudy">
+                                <img class="cloudy" src="images/img/img_transp.gif" alt="cloudy">
                             </div>
                             <div class="db_right">
                                 <h3>Вночі</h3>
@@ -204,7 +204,7 @@
                         </div>
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="cloudy" src="images/img/img_transp.gif" alt="cloudy">
+                                <img class="cloudy" src="images/img/img_transp.gif" alt="cloudy">
                             </div>
                             <div class="db_right">
                                 <h3>Зранку</h3>
@@ -215,7 +215,7 @@
                         </div>
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="cloudy" src="images/img/img_transp.gif" alt="cloudy">
+                                <img class="cloudy" src="images/img/img_transp.gif" alt="cloudy">
                             </div>
                             <div class="db_right">
                                 <h3>Вдень</h3>
@@ -226,7 +226,7 @@
                         </div>
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="snowy" src="images/img/img_transp.gif" alt="snowy">
+                                <img class="snowy" src="images/img/img_transp.gif" alt="snowy">
                             </div>
                             <div class="db_right">
                                 <h3>Ввечері</h3>
