--- a/weekly_forecast.html
+++ b/weekly_forecast.html
@@ -241,7 +241,7 @@
                     <div role="tabpanel" class="tab-pane" id="thursday">
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="hot" src="images/img/img_transp.gif" alt="hot">
+                                <img class="hot" src="images/img/img_transp.gif" alt="hot">
                             </div>
                             <div class="db_right">
                                 <h3>Вночі</h3>
@@ -252,7 +252,7 @@
                         </div>
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="hot" src="images/img/img_transp.gif" alt="hot">
+                                <img class="hot" src="images/img/img_transp.gif" alt="hot">
                             </div>
                             <div class="db_right">
                                 <h3>Зранку</h3>
@@ -263,7 +263,7 @@
                         </div>
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="cloudy" src="images/img/img_transp.gif" alt="cloudy">
+                                <img class="cloudy" src="images/img/img_transp.gif" alt="cloudy">
                             </div>
                             <div class="db_right">
                                 <h3>Вдень</h3>
@@ -274,7 +274,7 @@
                         </div>
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="snowy" src="images/img/img_transp.gif" alt="snowy">
+                                <img class="snowy" src="images/img/img_transp.gif" alt="snowy">
                             </div>
                             <div class="db_right">
                                 <h3>Ввечері</h3>
@@ -289,7 +289,7 @@
                     <div role="tabpanel" class="tab-pane" id="friday">
                          <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="rainy" src="images/img/img_transp.gif" alt="rainy">
+                                <img class="rainy" src="images/img/img_transp.gif" alt="rainy">
                             </div>
                             <div class="db_right">
                                 <h3>Вночі</h3>
@@ -300,7 +300,7 @@
                         </div>
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="rainy" src="images/img/img_transp.gif" alt="rainy">
+                                <img class="rainy" src="images/img/img_transp.gif" alt="rainy">
                             </div>
                             <div class="db_right">
                                 <h3>Зранку</h3>
@@ -311,7 +311,7 @@
                         </div>
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="cloudy" src="images/img/img_transp.gif" alt="cloudy">
+                                <img class="cloudy" src="images/img/img_transp.gif" alt="cloudy">
                             </div>
                             <div class="db_right">
                                 <h3>Вдень</h3>
@@ -322,7 +322,7 @@
                         </div>
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="rainy" src="images/img/img_transp.gif" alt="rainy">
+                                <img class="rainy" src="images/img/img_transp.gif" alt="rainy">
                             </div>
                             <div class="db_right">
                                 <h3>Ввечері</h3>
@@ -336,7 +336,7 @@
                     <div role="tabpanel" class="tab-pane" id="saturday">
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="cloudy" src="images/img/img_transp.gif" alt="cloudy">
+                                <img class="cloudy" src="images/img/img_transp.gif" alt="cloudy">
                             </div>
                             <div class="db_right">
                                 <h3>Вночі</h3>
@@ -347,7 +347,7 @@
                         </div>
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="cloudy" src="images/img/img_transp.gif" alt="cloudy">
+                                <img class="cloudy" src="images/img/img_transp.gif" alt="cloudy">
                             </div>
                             <div class="db_right">
                                 <h3>Зранку</h3>
@@ -358,7 +358,7 @@
                         </div>
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="snowy" src="images/img/img_transp.gif" alt="snowy">
+                                <img class="snowy" src="images/img/img_transp.gif" alt="snowy">
                             </div>
                             <div class="db_right">
                                 <h3>Вдень</h3>
@@ -369,7 +369,7 @@
                         </div>
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="snowy" src="images/img/img_transp.gif" alt="snowy">
+                                <img class="snowy" src="images/img/img_transp.gif" alt="snowy">
                             </div>
                             <div class="db_right">
                                 <h3>Ввечері</h3>
@@ -384,7 +384,7 @@
                     <div role="tabpanel" class="tab-pane" id="sunday">
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="cloudy" src="images/img/img_transp.gif" alt="cloudy">
+                                <img class="cloudy" src="images/img/img_transp.gif" alt="cloudy">
                             </div>
                             <div class="db_right">
                                 <h3>Вночі</h3>
@@ -395,7 +395,7 @@
                         </div>
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="hot" src="images/img/img_transp.gif" alt="hot">
+                                <img class="hot" src="images/img/img_transp.gif" alt="hot">
                             </div>
                             <div class="db_right">
                                 <h3>Зранку</h3>
@@ -406,7 +406,7 @@
                         </div>
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="hot" src="images/img/img_transp.gif" alt="hot">
+                                <img class="hot" src="images/img/img_transp.gif" alt="hot">
                             </div>
                             <div class="db_right">
                                 <h3>Вдень</h3>
@@ -417,7 +417,7 @@
                         </div>
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img id="hot" src="images/img/img_transp.gif" alt="hot">
+                                <img class="hot" src="images/img/img_transp.gif" alt="hot">
                             </div>
                             <div class="db_right">
                                 <h3>Ввечері</h3>
