--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         
         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
             <div class="db_left">
-                <img id="hot" src="images/img/img_transp.gif" alt="hot">
+                <img class="hot" src="images/img/img_transp.gif" alt="hot">
             </div>
             <div class="db_right">
                 <h3>Вночі</h3>
@@ -103,7 +103,7 @@
 
         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
             <div class="db_left">
-                <img id="cloudy" src="images/img/img_transp.gif" alt="cloudy">
+                <img class="cloudy" src="images/img/img_transp.gif" alt="cloudy">
             </div>
             <div class="db_right">
                 <h3>Зранку</h3>
@@ -115,7 +115,7 @@
             
         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
             <div class="db_left">
-                <img id="rainy" src="images/img/img_transp.gif" alt="rainy">
+                <img class="rainy" src="images/img/img_transp.gif" alt="rainy">
             </div>
             <div class="db_right">
                 <h3>Вдень</h3>
@@ -127,7 +127,7 @@
 
         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
             <div class="db_left">
-                <img id="snowy" src="images/img/img_transp.gif" alt="snowy">
+                <img class="snowy" src="images/img/img_transp.gif" alt="snowy">
             </div>
             <div class="db_right">
                 <h3>Ввечері</h3>
