--- a/contact.html
+++ b/contact.html
@@ -76,8 +76,11 @@
         </div>
         <div class="box">
             <h2>Форма зворотнього зв'язку</h2>
-            <p>Шавновні гості Сайту, буду радий Вашим побажанням та пропозиціям! Вони будуть розглянуті впродовж однієї доби. Щоб надіслати листа, заповніть, будь-ласка, наступну форму.</p>
-            <p>Усі поля є обов'язковими для заповнення.</p>
+            <p>Радий вітати Вас, шановні відвідувачі сайту "Прогноз погоди"!</p>
+            <p>Як відомо, розвиток - це поняття, якому невідомі кордони та обмеження! Робота над даним розширенням функціоналу Проекту відбувається постійно. Друзі, він був створений та працює для Вас!</p>
+            <p>Тому, буду радий відгукам та пропозиціям, які Ви можете надсилати через форму, розміщену нижче. Ваші повідомлення будуть розглянуті впродовж однієї доби.</p>
+            <p><b>* Усі поля є обов'язковими для заповнення!</b></p>
+            <p>З повагою, Адміністрація сайту "Прогноз погоди".</p>
         </div>
     </section>
     <section>
