--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
 <footer>
         <div class="box">
             <p class="rights">
-                2015 &reg; All Rights Reserved.
+                2015 &reg; All Rights Reserved. By Demus Ruslan.
             </p>
             <div id="id01" class="alf-window">
                 <div class="alf-window-dialog">
