--- a/weekly_forecast.html
+++ b/weekly_forecast.html
@@ -274,7 +274,7 @@
                         </div>
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img class="rainy" src="images/img/img_transp.gif" alt="rainy">
+                                <img class="cloudy" src="images/img/img_transp.gif" alt="cloudy">
                             </div>
                             <div class="db_right">
                                 <h3>Ввечері</h3>
@@ -417,7 +417,7 @@
                         </div>
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img class="hot" src="images/img/img_transp.gif" alt="hot">
+                                <img class="cloudy" src="images/img/img_transp.gif" alt="cloudy">
                             </div>
                             <div class="db_right">
                                 <h3>Ввечері</h3>
@@ -434,7 +434,7 @@
 <footer>
         <div class="box">
             <p class="rights">
-                2015 &reg; All Rights Reserved.
+                2015 &reg; All Rights Reserved. By Demus Ruslan.
             </p>
             <div id="id01" class="alf-window">
                 <div class="alf-window-dialog">
