--- a/weekly_forecast.html
+++ b/weekly_forecast.html
@@ -252,7 +252,7 @@
                         </div>
                         <div class="daybox" data-toggle="tooltip" data-placement="bottom" title="Подвійний клік для закриття">
                             <div class="db_left">
-                                <img class="hot" src="images/img/img_transp.gif" alt="hot">
+                                <img class="cloudy" src="images/img/img_transp.gif" alt="cloudy">
                             </div>
                             <div class="db_right">
                                 <h3>Зранку</h3>
