--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
             <script>
                 document.write("<h2>" + todayis + ", " + nowdate + " " + nowmonthis + " " + nowyear + " р.</h2>");
             </script>
-            <p><b>Народний прогноз погоди</b>: 21 липня вшановується пам'ять святого великомученика Прокопа. У народі святого Прокопа називали Жнивником, оскільки у цей час починали в'язати снопи. Також у цей день відзначається свято Казанської ікони Божої Матері. У народі говорили: "Хто на Казанську одружиться, щасливий буде", тому в цей час справлялось багато весіль. По цьому дню судили про найближчу зиму: "Що Казанська покаже, те й зима скаже". З 21 липня починається найсильніша спека.</p>
+            <p><b>Народний прогноз погоди</b>: 21 липня вшановується пам'ять <strong>святого великомученика Прокопа</strong>. У народі святого Прокопа називали Жнивником, оскільки у цей час починали в'язати снопи. Також у цей день відзначається свято Казанської ікони Божої Матері. У народі говорили: "Хто на Казанську одружиться, щасливий буде", тому в цей час справлялось багато весіль. По цьому дню судили про найближчу зиму: "Що Казанська покаже, те й зима скаже".</p>
+            <p> З 21 липня починається найсильніша спека.</p>
         </div>
     </section>
     <section>
