--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
         </div>
         <div class="box">
             <h2>Форма зворотнього зв'язку</h2>
-            <p>Радий вітати Вас, шановні відвідувачі сайту "Прогноз погоди"!</p>
+            <p><b>Радий вітати Вас, шановні відвідувачі сайту "Прогноз погоди"!</b></p>
             <p>Як відомо, розвиток - це поняття, якому невідомі кордони та обмеження! Робота над даним розширенням функціоналу Проекту відбувається постійно. Друзі, він був створений та працює для Вас! Тому, буду радий відгукам та пропозиціям, які Ви можете надсилати через форму, розміщену нижче. Ваші повідомлення будуть розглянуті впродовж однієї доби.</p>
             <p><b>* Усі поля є обов'язковими для заповнення!</b></p>
             <p>З повагою, Адміністрація сайту "Прогноз погоди".</p>
