--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
                                     </form>
                                     <script>
                                         function myFunction() {
-                                            if (form1.elements['search_alf'].value) {
+                                            //if (form1.elements['search_alf'].value) {
                                                 window.open("http://www.google.com/?#q="+form1.search_alf.value);
-                                                }
+                                            //    }
                                             }
                                     </script>
                         </div>
