--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                     <p>Гаразд, кажи, що тебе цікавить:</p>
                                     <form method="post" id="form1">
                                         <input class="alf-form" type="text" name="search_alf" size="41" required autofocus>
-                                        <input class="alf-form" type="submit" value="Запитати!" onclick="myFunction();">
+                                        <input class="alf-form" type="submit" value="Запитати!" onclick="myFunction()">
                                     </form>
                                     <script>
                                         function myFunction() {
