--- a/index.html
+++ b/index.html
@@ -111,15 +111,15 @@
                                     <p>Гаразд, кажи, що тебе цікавить:</p>
                                     <form method="post" id="form1">
                                         <input class="alf-form" type="text" name="search_alf" size="41" required autofocus>
-                                        <input class="alf-form" type="submit" value="Запитати!" onclick="window.open("http://www.google.com/?#q="+form1.search_alf.value);">
+                                        <input class="alf-form" type="submit" value="Запитати!" onclick="myFunction();">
                                     </form>
-                                    <!--<script>
+                                    <script>
                                         function myFunction() {
                                             if (form1.elements['search_alf'].value) {
                                                 window.open("http://www.google.com/?#q="+form1.search_alf.value);
                                                 }
                                             }
-                                    </script> -->
+                                    </script>
                         </div>
                     </div>
                 </div>
