--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                         document.write("<h2>" + hello + "! Давно не бачилися... А я знав, що без моєї допомоги ти не справишся!</h2>");
                                     </script>
                                     <p>Гаразд, кажи, що тебе цікавить:</p>
-                                    <form method="post" id="form1">
+                                    <form method="get" id="form1">
                                         <input class="alf-form" type="text" name="search_alf" size="41" required autofocus>
                                         <input class="alf-form" type="submit" value="Запитати!" onclick="myFunction();">
                                     </form>
